Changed authors, styles, and fixed fullscreen

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
-Dwarakesh (https://github.com/Dwarakesh-V)
+Dwarakesh Venkatesh <https://github.com/Dwarakesh-V>
+    - Project founder and lead developer
+    - Implemented core architecture and styles
 
-[algorithms.js]
-Sarigasini (https://github.com/Sariga-2005)
+Sarigasini M <https://github.com/Sariga-2005>
+    - Implemented algorithms logic in algorithms.js
