Updated AUTHORS, moved const elements to correct files.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,1 @@
-Dwarakesh Venkatesh <https://github.com/Dwarakesh-V>
-    - Project founder and lead developer
-    - Implemented core architecture and styles
-
-Sarigasini M <https://github.com/Sariga-2005>
-    - Implemented algorithms logic in algorithms.js
+This is an individual project by Dwarakesh Venkatesh <https://github.com/Dwarakesh-V>
