Updated authors, TODO, renamed files, globalized functions, fixed random graph isolated vertices bug.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,9 @@
-This is an individual project by Dwarakesh Venkatesh <https://github.com/Dwarakesh-V>
+# AUTHORS
+
+Dwarakesh Venkatesh <https://github.com/Dwarakesh-V>
+  - Project founder and lead developer
+  - Implemented core architecture and styles
+  - Co-developed algorithm logic in algorithms.js
+
+Sarigasini M <https://github.com/Sariga-2005>
+  - Co-developed algorithm logic in algorithms.js
