--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,4 @@
 # AUTHORS
 
-Dwarakesh Venkatesh <https://github.com/Dwarakesh-V>
-  - Project founder and lead developer
-  - Implemented core architecture and styles
-  - Co-developed algorithm logic in algorithms.js
-
-Sarigasini M <https://github.com/Sariga-2005>
-  - Co-developed algorithm logic in algorithms.js
+Dwarakesh Venkatesh 
+Sarigasini M 
